# DeepParse

./: .gitignore  .gitmodules  CITATION.cff  Dockerfile  LICENSE  Makefile  README.MD  README.md  THIRD_PARTY_NOTICES.md  environment.yml  main.py  requirments.txt
.github/workflows/: ci.yml
anonymization/: scrub_paths.py
configs/: default.yaml  demo_small.yaml  eval_16_datasets.yaml
deepparse/: __init__.py  cli.py  dataset_loader.py  io_paths.py  masks_types.py  seeds.py  tokenize.py
deepparse-artifact/: README.md  pyproject.toml
deepparse-artifact/anonymization/: ARTIFACT_ANON_GUIDE.md
deepparse-artifact/deepparse/: api.py  logging_utils.py
deepparse-artifact/deepparse/evaluation/: eval_runner.py
deepparse-artifact/deepparse/metrics/: parsing_accuracy.py
deepparse-artifact/deepparse/synth/: __init__.py  prompt_templates.py  r1_deepseek_stub.py
deepparse-artifact/deepparse/utils/: sampling.py
deepparse-artifact/scripts/: prepare_paths.sh  run_demo.sh  run_eval_all.sh
deepparse-artifact/tests/golden/: demo_eval.txt
deepparse/drain/: __init__.py  drain_engine.py  masks_application.py
deepparse/evaluation/: __init__.py  tables.py  timing_bench.py
deepparse/metrics/: __init__.py  grouping_accuracy.py
deepparse/synth/: hf_deepseek_r1.py  llm_adapter.py
deepparse/utils/: __init__.py  deterministic.py  regex_library.py  yaml_loader.py
scripts/: fetch_datasets.sh  regenerate_tables.sh
tests/: test_cli_e2e.py  test_drain_masks.py  test_metrics_ga_pa.py  test_public_api.py  test_regex_classes.py  test_synth_stub_determinism.py
