[project]
name = "deepparse-artifact"
version = "1.0.0"
description = "Hybrid LLM-assisted log parsing artifact"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "Anonymous"}]
requires-python = ">=3.11"
dependencies = [
    "pyyaml==6.0.1",
    "click==8.1.7",
    "tqdm==4.66.1",
    "torch==2.1.2",
    "transformers==4.36.2",
    "accelerate==0.24.1",
]

[project.optional-dependencies]
test = [
    "pytest==7.4.4",
]
lint = [
    "ruff==0.1.9",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
